tests/NormalTests/paczka1/fuzzy1/38343358.err
Error in line 1: aNdHxasDK S227 62,0
Error in line 3: uCrEedZg A154 68,6
Error in line 5: aNdHxasDK A318 30,6
Error in line 7: aNdHxasDK S227 58,4
Error in line 36: uCrEedZg A154 47,0
Error in line 30: bMXSqvZNtQb S211 73,7
